--- a/refs.bib
+++ b/refs.bib
@@ -16,7 +16,16 @@
 }
 
 
-
+@article{akiyama2022first,
+	title={First Sagittarius A* Event Horizon Telescope Results. I. The Shadow of the Supermassive Black Hole in the Center of the Milky Way},
+	author={Akiyama, Kazunori and Alberdi, Antxon and Alef, Walter and Algaba, Juan Carlos and Anantua, Richard and Asada, Keiichi and Azulay, Rebecca and Bach, Uwe and Baczko, Anne-Kathrin and Ball, David and others},
+	journal={The Astrophysical Journal Letters},
+	volume={930},
+	number={2},
+	pages={L12},
+	year={2022},
+	publisher={IOP Publishing}
+}
 
 
 
