--- a/main.tex
+++ b/main.tex
@@ -668,7 +668,7 @@ Finally, we compare convergence speed for QPMCMC using 1,000, 5,000 and 10,000 p
  \begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.9\linewidth]{blackHole.png}
-	\caption{On the left is a $4076\times4076$ intensity map of the shadow of supermassive black hole Sagittarius A*  \citep{akiyama2022first}.  On the right is the pixelwise posterior mode of a Bayesian image classification model fit to intensity data.  Within a Metropolis-in-Gibbs routine, quantum parallel MCMC requires less that one-tenth the posterior evaluations required by conventional parallel MCMC.}\label{fig:blackHole}
+	\caption{On the left is a 4,076-by-4,076 intensity map of the shadow of supermassive black hole Sagittarius A*  \citep{akiyama2022first}.  On the right is the pixelwise posterior mode of a Bayesian image classification model fit to intensity data.  Within a Metropolis-in-Gibbs routine, quantum parallel MCMC using 1,024 proposals requires less that one-tenth the posterior evaluations required by conventional parallel MCMC.}\label{fig:blackHole}
 \end{figure}
 
 
