--- a/refs.bib
+++ b/refs.bib
@@ -27,6 +27,16 @@
 	publisher={IOP Publishing}
 }
 
+@article{hurn1997difficulties,
+	title={Difficulties in the use of auxiliary variables in Markov chain Monte Carlo methods},
+	author={Hurn, Merrilee},
+	journal={Statistics and Computing},
+	volume={7},
+	number={1},
+	pages={35--44},
+	year={1997},
+	publisher={Springer}
+}
 
 
 
