--- a/refs.bib
+++ b/refs.bib
@@ -40,7 +40,8 @@
 
 
 
-
+  @Article{coda,
+  	    title = {CODA: Convergence Diagnosis and Output Analysis for MCMC},    author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines},    journal = {R News},    year = {2006},    volume = {6},    number = {1},    pages = {7--11},    url = {https://journal.r-project.org/archive/},    pdf = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf},  }
 
 @article{montanaro,
 	author = {Montanaro, Ashley },
