--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -15,6 +15,14 @@
 	}
 }
 
+@article{lao2020tfp,
+	title={tfp. mcmc: Modern Markov chain Monte Carlo tools built for modern hardware},
+	author={Lao, Junpeng and Suter, Christopher and Langmore, Ian and Chimisov, Cyril and Saxena, Ashish and Sountsov, Pavel and Moore, Dave and Saurous, Rif A and Hoffman, Matthew D and Dillon, Joshua V},
+	journal={arXiv preprint arXiv:2002.01184},
+	year={2020}
+}
+
+@Manual{wes,    title = {wesanderson: A Wes Anderson Palette Generator},    author = {Karthik Ram and Hadley Wickham},    year = {2018},    note = {R package version 0.3.6},    url = {https://CRAN.R-project.org/package=wesanderson},  }
 
 @article{akiyama2022first,
 	title={First Sagittarius A* Event Horizon Telescope Results. I. The Shadow of the Supermassive Black Hole in the Center of the Milky Way},
