--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -154,7 +154,7 @@ d_{F}
 \definecolor{trevorblue}{rgb}{0.330, 0.484, 0.828}
 \definecolor{trevoryellow}{rgb}{0.829, 0.680, 0.306}
 
-%\input{make-edits}
+\input{make-edits}
 %\makeatletter
 %\def\title@font{\Huge}
 %\let\ltx@maketitle\@maketitle
