--- a/manuscript/revision_letter.tex
+++ b/manuscript/revision_letter.tex
@@ -201,7 +201,7 @@
 
 \begin{document}
 
-%\input{main.xtr}
+\input{main.xtr}
 
 \centerline{\large \bf Reponse to Editor and Reviewer Comments}
 
@@ -212,7 +212,15 @@ I have carefully considered these extremely helpful suggestions and have address
 
 In particular, I have:
 \begin{itemize}
-	\item done things
+	\item clarified how the present work compares to other quantum Monte Carlo methods;
+	
+	\item expanded the scope of the methods to include discrete target distributions (Section \ref{sec:discrete});
+	
+	\item included an application to Bayesian image analysis (Section \ref{sec:bayesIm});
+	
+	\item included a short discussion around challenges reading classical data into quantum machines; and
+	
+	\item responded to all other Reviewer/AE questions and comments.
 \end{itemize}
 
 
