begun response to rev 1

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -200,7 +200,7 @@ d_{F}
 
 \begin{abstract}
 
-We propose a novel quantum computing strategy for parallel MCMC algorithms that generate multiple proposals at each step. This strategy makes parallel MCMC amenable to quantum parallelization by using the Gumbel-max trick to turn the generalized accept-reject step into a discrete optimization problem.  When combined with new insights from the parallel MCMC literature, such an approach allows us to embed target density evaluations within a well-known extension of Grover's quantum search algorithm.  Letting $P$ denote the number of proposals in a single MCMC iteration, the combined strategy reduces the number of target evaluations required from $\order{P}$ to $\order{P^{1/2}}$.  In the following, we review the rudiments of quantum computing, quantum search and the Gumbel-max trick in order to elucidate their combination for as wide a readership as possible. 
+We propose a novel hybrid quantum computing strategy for parallel MCMC algorithms that generate multiple proposals at each step. This strategy makes the rate-limiting step within parallel MCMC amenable to quantum parallelization by using the Gumbel-max trick to turn the generalized accept-reject step into a discrete optimization problem.  When combined with new insights from the parallel MCMC literature, such an approach allows us to embed target density evaluations within a well-known extension of Grover's quantum search algorithm.  Letting $P$ denote the number of proposals in a single MCMC iteration, the combined strategy reduces the number of target evaluations required from $\order{P}$ to $\order{P^{1/2}}$.  In the following, we review the rudiments of quantum computing, quantum search and the Gumbel-max trick in order to elucidate their combination for as wide a readership as possible. 
 
 
 \end{abstract}
@@ -690,9 +690,13 @@ where $\ttheta=(\theta_1,\dots,\theta_D)$ share for a prior the Ising model \eqr
 
 We use a QPMCMC-within-Gibbs scheme to infer the join posterior of $\ttheta$ and the three mixture model parameters.  For the former, we use the same QPMCMC scheme as in Section \ref{sec:ising} with 1,024 proposals at each iteration. For the latter, we use the closed-form updates presented in \citet{hurn1997difficulties}.  We run this scheme for 20 million iterations, discarding the first 10 million as burnin.  We thin the remaining sample at a ratio of 1 to 40,000 for the latent memberships $\ttheta$ and 1 to 4,000 for the three parameters $\mu_{-1}$, $\mu_1$ and $\sigma^2$.  Using the \textsc{R} package \textsc{coda} \citep{coda}, we calculate effective sample sizes of the log-posterior (257.1), $\mu_{-1}$ (1,578.7), $\mu_1$ (257.6) and $\sigma^2$ (2,500.0), suggesting adequate convergence.   Figure \ref{fig:blackHole} shows both the intensity data and the pixelwise posterior mode of the latent membership vector $\ttheta$.  The QPMCMC requires only 1,977,553,608 target evaluations compared to the 1,024 $\times$ 20,000,000 $=$ 2.048$\times10^{10}$ evaluations required for the analogous parallel MCMC scheme implemented on a conventional computer, representing a 10.36-fold speedup.
 
-\section{Discussion}
+\section{Discussion}\label{sec:disc}
 
 We have shown that parallel MCMC enjoys quadratic speedups by combining quantum minimization with the Gumbel-max trick.  Within a QPMCMC iteration, the current state represents a warm-start for the sampling-turned-optimization problem, leading to increased efficiencies for the quantum minimization algorithm.   Moreover, combining this approach with the Tjelmeland correction \citep{holbrook2021generating} results in a total complexity reduction from $\mathcal{O}(P^2)$ to $\mathcal{O}(\sqrt{P})$.  Preliminary evidence suggests that our strategy may find use when target distributions exhibit extreme multimodality.  
+
+Nonetheless, there are major technical barriers to the practical implementation of QPMCMC.  The framework, like other hybrid quantum machine learning schemes, requires on-loading and off-loading classical data to and from a quantum machine.  In the seminal review on the subject quantum machine learning, \citet{biamonte2017quantum} discuss the `input problem' in the unnumbered section entitled \textbf{Reading classical data into quantum machines}.  QPMCMC is an overarching framework that is valid for multiple data representations, and different representations suffer from the input problem more than others.     On the one hand, continuous targets require reading $\order{P}$ real vectors onto the quantum machine.  If one follows \citet{jordan2005fast} and opts for a fixed precision representation of each $\ttheta_p\in \mathbb{R}^D$
+
+Conveniently, the `output problem' is less of an issue for QPMCMC, as only a single integer $\hat{p} \in \{0,\dots,P\}$ need be extracted.
 
 This work leads to two interesting questions.   First, what is the status of inference obtained by QPMCMC?  The QPMCMC selection step relies on quantum minimization, an algorithm that only achieves success with probability $1-\epsilon$.  While empirical studies suggest that this error induces little bias, it would be helpful to use this $\epsilon$ to bound the distance between the target distribution and the distribution generated by QPMCMC.  Such theoretical efforts would need to extend recent formalizations of the multiproposal based parallel MCMC paradigm \citep{glatt} to account for biased MCMC kernels.
 
