--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -22,6 +22,17 @@
 	year={2020}
 }
 
+@article{biamonte2017quantum,
+	title={Quantum machine learning},
+	author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
+	journal={Nature},
+	volume={549},
+	number={7671},
+	pages={195--202},
+	year={2017},
+	publisher={Nature Publishing Group}
+}
+
 @Manual{wes,    title = {wesanderson: A Wes Anderson Palette Generator},    author = {Karthik Ram and Hadley Wickham},    year = {2018},    note = {R package version 0.3.6},    url = {https://CRAN.R-project.org/package=wesanderson},  }
 
 @article{akiyama2022first,
