--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -22,6 +22,22 @@
 	year={2020}
 }
 
+@article{cortese2018loading,
+	title={Loading classical data into a quantum computer},
+	author={Cortese, John A and Braje, Timothy M},
+	journal={arXiv preprint arXiv:1803.01958},
+	year={2018}
+}
+
+@inproceedings{haener2018quantum,
+	title={Quantum circuits for floating-point arithmetic},
+	author={Haener, Thomas and Soeken, Mathias and Roetteler, Martin and Svore, Krysta M},
+	booktitle={International Conference on Reversible Computation},
+	pages={162--174},
+	year={2018},
+	organization={Springer}
+}
+
 @article{biamonte2017quantum,
 	title={Quantum machine learning},
 	author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
